name: mock
version: 0.1
cabal-version: 2.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
  build-depends: base
               , aeson
               , bytestring
               , directory
               , filepath
               , http-client
               , http-client-tls
               , http-types
               , optparse-applicative
               , process
               , text
  exposed-modules:
    Mock
    BeeGfsOptions
    BeeGfsApi
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wmissing-fields
               -Werror=incomplete-record-updates -Werror=incomplete-uni-patterns -Werror=partial-fields -Werror=missing-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
               -- Partial type signatures are OK
               -Wno-partial-type-signatures

              -- for now
               -Wno-unused-imports
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable beegfs-ctl
  main-is: beegfs-ctl.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wmissing-fields
               -Werror=incomplete-record-updates -Werror=incomplete-uni-patterns -Werror=partial-fields -Werror=missing-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , mock

test-suite mock-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:            Spec.hs
    other-modules:      BeeGfsOptionsSpec
    build-depends:      base
                      , mock
                      , hspec
                      , optparse-applicative
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010